--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".CalenderActivity"
+            android:theme="@style/Theme.TrekTraveler">
+        </activity>
     </application>
 
 </manifest>
