--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,11 @@
             android:name=".CalenderActivity"
             android:theme="@style/Theme.TrekTraveler">
         </activity>
+        <activity
+            android:name=".CityActivity"
+            android:theme="@style/Theme.TrekTraveler">
+
+        </activity>
     </application>
 
 </manifest>
