--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.TrekTraveler"
         tools:targetApi="31">
         <activity
+            android:name=".locationSearch"
+            android:exported="false" />
+        <activity
             android:name=".search_main"
             android:exported="false" />
         <activity
@@ -31,8 +34,7 @@
         </activity>
         <activity
             android:name=".CalenderActivity"
-            android:theme="@style/Theme.TrekTraveler">
-        </activity>
+            android:theme="@style/Theme.TrekTraveler"></activity>
     </application>
 
 </manifest>
