Changed start activity to be search_main. search_main buttons need to be set up to test the Calendar Activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,19 +13,14 @@
         android:theme="@style/Theme.TrekTraveler"
         tools:targetApi="31">
         <activity
-            android:name=".search_main"
-            android:exported="false" />
-        <activity
             android:name=".Splash"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".SearchMain"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.TrekTraveler">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
