--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,12 @@
             android:name=".CityActivity"
             android:theme="@style/Theme.TrekTraveler">
         </activity>
+        <activity
+            android:name=".locationSearch"
+            android:theme="@style/Theme.TrekTraveler">
+
+        </activity>
+
     </application>
 
 </manifest>
