Added navigation between the screens, as well as some logic to a button.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,8 +35,16 @@
         <activity
             android:name=".locationSearch"
             android:theme="@style/Theme.TrekTraveler">
-
         </activity>
+        <activity
+            android:name=".BikeScreen"
+            android:theme="@style/Theme.TrekTraveler">
+        </activity>
+        <activity
+            android:name=".TransitScreen"
+            android:theme="@style/Theme.TrekTraveler">
+        </activity>
+
 
     </application>
 
