--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -14,40 +15,37 @@
         android:theme="@style/Theme.TrekTraveler"
         tools:targetApi="31">
         <activity
+            android:name=".neighorhoods"
+            android:exported="false" />
+        <activity
             android:name=".Splash"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".SearchMain"
             android:exported="true"
-            android:theme="@style/Theme.TrekTraveler">
-        </activity>
+            android:theme="@style/Theme.TrekTraveler"></activity>
         <activity
             android:name=".CalenderActivity"
-            android:theme="@style/Theme.TrekTraveler">
-        </activity>
+            android:theme="@style/Theme.TrekTraveler"></activity>
+
         <activity
             android:name=".CityActivity"
-            android:theme="@style/Theme.TrekTraveler">
-        </activity>
+            android:theme="@style/Theme.TrekTraveler"></activity>
         <activity
             android:name=".locationSearch"
-            android:theme="@style/Theme.TrekTraveler">
-        </activity>
+            android:theme="@style/Theme.TrekTraveler"></activity>
         <activity
             android:name=".BikeScreen"
-            android:theme="@style/Theme.TrekTraveler">
-        </activity>
+            android:theme="@style/Theme.TrekTraveler"></activity>
         <activity
             android:name=".TransitScreen"
-            android:theme="@style/Theme.TrekTraveler">
-        </activity>
-
-
+            android:theme="@style/Theme.TrekTraveler"></activity>
     </application>
 
 </manifest>
