Added a second hotel to the accomodations tab with all the information changed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
             android:name=".HotelInfo"
             android:exported="false" />
         <activity
+            android:name=".HotelInfo2"
+            android:exported="false" />
+        <activity
             android:name=".HotelActivity"
             android:exported="false" />
         <activity
