--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
             android:name=".HotelInfo2"
             android:exported="false" />
         <activity
+            android:name=".HotelInfo3"
+            android:exported="false" />
+        <activity
             android:name=".HotelActivity"
             android:exported="false" />
         <activity
