orientation locked in portrait.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,21 +16,27 @@
         tools:targetApi="31">
         <activity
             android:name=".HotelInfo"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".HotelInfo2"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".HotelInfo3"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".HotelActivity"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".neighorhoods"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".Splash"
+            android:screenOrientation="portrait"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -40,22 +46,28 @@
         </activity>
         <activity
             android:name=".SearchMain"
+            android:screenOrientation="portrait"
             android:exported="true"
             android:theme="@style/Theme.TrekTraveler" />
         <activity
             android:name=".CalenderActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.TrekTraveler" />
         <activity
             android:name=".CityActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.TrekTraveler" />
         <activity
             android:name=".locationSearch"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.TrekTraveler" />
         <activity
             android:name=".BikeScreen"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.TrekTraveler" />
         <activity
             android:name=".TransitScreen"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.TrekTraveler" />
 
     </application>
